--- a/android/res/raw/about.html
+++ b/android/res/raw/about.html
@@ -39,7 +39,7 @@ for providing the Search Keywords Suggestions service for free (https://suggestq
 To the
 <font color="#2e9ec7"><a href="https://www.libtorrent.org/?from=frostwire">LibTorrent-Rasterbar</a></font> team.
 All BitTorrent networking on this application is performed by a libtorrent wrapper created by the FrostWire Team called
-<font color="#2e9ec7"><a href="https://github.com/frostwire/frostwire-jlibtorrent">frostwire-jlibtorrent</a></font>.
+<font color="#2e9ec7"><a href="https://github.com/frostwire/frostwire-jlibtorrent">SnapLoad-jlibtorrent</a></font>.
 <br />
 <br />
 
